<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/recorder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recorder_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/recorder_type"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/recorder_type"
        android:textSize="13dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/recorder_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recorder_type_wav"
        android:layout_width="64dp"
        android:layout_height="26dp"
        android:layout_marginStart="5dp"
        android:button="@null"
        android:background="@drawable/radiobutton_selector"
        android:gravity="center"
        android:text="@string/recorder_type_wav"
        android:textColor="@color/color_selector"
        android:textSize="13dp"
        app:layout_constraintTop_toTopOf="@id/recorder_type"
        app:layout_constraintBottom_toBottomOf="@id/recorder_type"
        app:layout_constraintStart_toEndOf="@id/recorder_type"/>

    <TextView
        android:id="@+id/recorder_type_raw"
        android:layout_width="64dp"
        android:layout_height="26dp"
        android:button="@null"
        android:layout_marginStart="5dp"
        android:background="@drawable/radiobutton_selector"
        android:gravity="center"
        android:text="@string/recorder_type_raw"
        android:textColor="@color/color_selector"
        android:textSize="13dp"
        app:layout_constraintTop_toTopOf="@id/recorder_type"
        app:layout_constraintBottom_toBottomOf="@id/recorder_type"
        app:layout_constraintStart_toEndOf="@id/recorder_type_wav"/>

    <TextView
        android:id="@+id/recorder_type_mp3"
        android:layout_width="64dp"
        android:layout_height="26dp"
        android:button="@null"
        android:layout_marginStart="5dp"
        android:background="@drawable/radiobutton_selector"
        android:gravity="center"
        android:text="@string/recorder_type_mp3"
        android:textColor="@color/color_selector"
        android:textSize="13dp"
        app:layout_constraintTop_toTopOf="@id/recorder_type"
        app:layout_constraintBottom_toBottomOf="@id/recorder_type"
        app:layout_constraintStart_toEndOf="@id/recorder_type_raw"/>


    <TextView
        android:id="@+id/recorder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recorder_time"
        android:textColor="@color/color_28b1cd"
        android:textSize="33dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recorder_start"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recorder_title"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/recorder_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recorder_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recorder_title" />

</android.support.constraint.ConstraintLayout>